<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/miSetting"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/miAddContact"
        android:title="@string/AddContact"
        android:icon="@drawable/ic_baseline_person_add_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/miFavourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/miFeedback"
        android:title="@string/give_feedback"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/miClose"
        android:title="@string/close_app"
        app:showAsAction="never"
        />





</menu>